@@ -1,3 +1,8 @@
+SimpleComplex/Database 1.x, 2019-01-15
+--------------------------------------
+- Links to method implementations in interfaces' phpdocs,
+  to ease navigation in source.
+
 SimpleComplex/Database 1.x, 2019-01-06
 --------------------------------------
 - Release 1.3.2.
